syntax = "proto3";
package pb;

import "base.proto";

option go_package = "api/pb";

service UserSvc {
  rpc Authorization(TextRequest) returns (StateReply) {}
  rpc GetRole(RoleRequest) returns (RoleReply) {}
  rpc GetRoleImage(RoleRequest) returns (TextReply) {}
  rpc GetAuthToken(TextRequest) returns (TextReply) {}
  rpc CreateUser(UserRequest) returns (UserReply) {}
  rpc GetUser(UserRequest) returns (UserReply) {}
  rpc GetUserByName(UserRequest) returns (UserReply) {}
  rpc GetUsers(UserRequest) returns (UsersReply) {}
  rpc UpdateUser(UserRequest) returns (StateReply) {}
}

message RoleRequest {
  int64 id = 1;
}

message RoleReply {
  Role role = 1;
}

message RolesReply {
  repeated Role roles = 1;
}

message UserRequest {
  User user = 1;
}

message UserReply {
  User user = 1;
}

message UsersReply {
  repeated User users = 1;
}

message User {
  int64 id = 1;
  string name = 2;
  string mobile = 3;
  string remark = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message Role {
  int64 id = 1;
  int64 userId = 2;
  string profession = 3;
  int64 exp = 4;
  int64 level = 5;
  int64 strength = 6;
  int64 culture = 7;
  int64 environment = 8;
  int64 charisma = 9;
  int64 talent = 10;
  int64 intellect = 11;
  string createdAt = 12;
  string updatedAt = 13;
}

message Equipment {
  int64 id = 1;
  string name = 2;
  string quality = 3;
  int64 level = 4;
  string category = 5;
  string createdAt = 6;
}

message Quest {
  int64 id = 1;
  string title = 2;
  int64 exp = 3;
  string attrPoints = 4;
  string preconditions = 5;
  string createdAt = 6;
}

message AttrChange {
  int64 userId = 1;
  string content = 2;
}
